welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:6: error: value carre is not a member of Unit
possible cause: maybe a semicolon is missing before `value carre'?
  } carre();
    ^